src/test/ui/span/issue-36530.stderr
error[E0658]: The attribute `foo` is currently unknown to the compiler and may have meaning added to it in the future (see issue #29642)
  --> $DIR/issue-36530.rs:11:1
   |
LL | #[foo] //~ ERROR is currently unknown to the compiler
   | ^^^^^^
   |
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `foo` is currently unknown to the compiler and may have meaning added to it in the future (see issue #29642)
  --> $DIR/issue-36530.rs:13:5
   |
LL |     #![foo] //~ ERROR is currently unknown to the compiler
   |     ^^^^^^^
   |
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
